<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.epam.tc</groupId>
    <artifactId>NastassiaStanchyk-TA</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <rest-assured.version>5.3.1</rest-assured.version>
        <cucumber.version>7.10.0</cucumber.version>
        <allure-maven.version>2.11.2</allure-maven.version>
        <aspectj.version>1.9.7</aspectj.version>
        <allure-testng.version>2.17.2</allure-testng.version>
        <webdrivermanager.version>5.3.0</webdrivermanager.version>
        <selenium.version>4.6.0</selenium.version>
        <lombok.version>1.18.24</lombok.version>
        <log4j.version>2.19.0</log4j.version>
        <checkstyle.version>9.2.1</checkstyle.version>
        <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
        <testng.version>7.8.0</testng.version>
        <assertj-core.version>3.24.2</assertj-core.version>
        <java.version>11</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <testng.configs.path>${project.build.testOutputDirectory}/testconfigs</testng.configs.path>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>${webdrivermanager.version}</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-support</artifactId>
            <version>${selenium.version}</version>
        </dependency>

        <dependency>
            <groupId>com.epam.tat.module4</groupId>
            <artifactId>calculator</artifactId>
            <version>1.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj-core.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <version>${allure-testng.version}</version>
        </dependency>

        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-testng</artifactId>
            <version>${cucumber.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <argLine>-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                        --add-opens java.base/java.lang=ALL-UNNAMED
                    </argLine>
                    <suiteXmlFiles>
                        <suiteXmlFile>${testng.suite.file}</suiteXmlFile>
                    </suiteXmlFiles>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
            </plugin>

            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>${allure-maven.version}</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.1.2</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${checkstyle.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <configLocation>
                        <!--  pay attention to use exact url for checkstyle plugin ruleset  -->
                        https://raw.githubusercontent.com/DmitryKhodakovsky/epam-training-center-code-checkers-configurations/main/checkstyle/checkstyle.xml
                    </configLocation>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                    <linkXRef>false</linkXRef>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>additionAndSubtractionTests</id>
            <properties>
                <testng.suite.file>${testng.configs.path}/calculatorSumAndSubTests.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>multiplyingAndDivisionTests</id>
            <properties>
                <testng.suite.file>${testng.configs.path}/calculatorMultAndDivTests.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>calculatorTests</id>
            <properties>
                <testng.suite.file>${testng.configs.path}/calculatorAllTests.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>seleniumBaseTests</id>
            <properties>
                <testng.suite.file>${testng.configs.path}/seleniumBaseTests.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>seleniumPageObjects</id>
            <properties>
                <testng.suite.file>${testng.configs.path}/seleniumPageObjects.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>allure</id>
            <properties>
                <testng.suite.file>${testng.configs.path}/allure.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>cucumber</id>
            <properties>
                <testng.suite.file>${testng.configs.path}/cucumber.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>grid</id>
            <properties>
                <testng.suite.file>${testng.configs.path}/grid.xml</testng.suite.file>
            </properties>
        </profile>

        <profile>
            <id>api</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <testng.suite.file>${testng.configs.path}/api.xml</testng.suite.file>
            </properties>
        </profile>
    </profiles>

</project>